Release v0.16.0 with support tickets, announcements and administrator order search
